--- a/static/css/pdf_page_prog.css
+++ b/static/css/pdf_page_prog.css
@@ -70,8 +70,9 @@ body {
     max-width: 95%;
     text-align: center;
     color: #1b641b;
-    background-color: #7bcf7b;
     border: 2px solid #008000;
+    table-layout:fixed;
+    word-break: keep-all;
 }
 
 #tbl thead tr th{
@@ -81,15 +82,9 @@ body {
 
 #tbl tbody tr td a{
     text-decoration: none;
-    color: #0d560d;
-    font-size: 16px;
+    color: #ffffff;
+    font-size: 14px;
     font-weight: 700;
-}
-
-#tbl tbody tr td a:hover{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
 }
 
 #tbl thead tr th{
@@ -115,12 +110,18 @@ body {
     background-color: #008000ad;
     padding: 7px;
     border: none;
-    border-radius: 5px;
+    border-radius: 0px;
 }
 
 #btn:hover{
     background-color: #008000ca;
 }
+
+#tbl th:nth-of-type(1) {width:44%;}
+#tbl th:nth-of-type(2) {width:21%;}
+#tbl th:nth-of-type(3) {width:25%;}
+#tbl th:nth-of-type(4) {width:10%;}
+
 
 /* @media (max-width:770px) {
 }
