--- a/static/css/pdf_page_sec.css
+++ b/static/css/pdf_page_sec.css
@@ -71,6 +71,8 @@ body {
     text-align: center;
     color: #1b641b;
     border: 2px solid #008000;
+    table-layout:fixed;
+    word-break: keep-all;
 }
 
 #tbl thead tr th{
@@ -115,6 +117,10 @@ body {
     background-color: #008000ca;
 }
 
+#tbl th:nth-of-type(1) {width:40%;}
+#tbl th:nth-of-type(2) {width:30%;}
+#tbl th:nth-of-type(3) {width:20%;}
+#tbl th:nth-of-type(4) {width:10%;}
 /* @media (max-width:770px) {
 }
 
