--- a/sub/templates/sub/dashboard.html
+++ b/sub/templates/sub/dashboard.html
@@ -62,6 +62,9 @@
             <div class="column">
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
+                    <tr style="background-color: #339933;">
+                      <th colspan="3">Number of Projects & Programs per CMI</th>
+                    </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">CMI</th>
                       <th scope="col" style="text-align: center;">Projects</th>
@@ -84,6 +87,9 @@
 
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
+                    <tr style="background-color: #339933;">
+                      <th colspan="3">Project Leader and the Team</th>
+                    </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">Projects</th>
                       <th scope="col">Leader</th>
@@ -106,6 +112,9 @@
 
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
+                    <tr style="background-color: #339933;">
+                      <th colspan="3">Program Leader and the Commodities</th>
+                    </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">Programs</th>
                       <th scope="col">Leader</th>
