--- a/sub/templates/sub/dashboard.html
+++ b/sub/templates/sub/dashboard.html
@@ -63,7 +63,7 @@
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
                     <tr style="background-color: #339933;">
-                      <th colspan="3">Number of Projects & Programs per CMI</th>
+                      <th colspan="3" style="text-align: center;">Number of Projects & Programs per CMI</th>
                     </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">CMI</th>
@@ -88,7 +88,7 @@
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
                     <tr style="background-color: #339933;">
-                      <th colspan="3">Project Leader and the Team</th>
+                      <th colspan="3"  style="text-align: center;">Project Leader and the Team</th>
                     </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">Projects</th>
@@ -113,7 +113,7 @@
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
                     <tr style="background-color: #339933;">
-                      <th colspan="3">Program Leader and the Commodities</th>
+                      <th colspan="3"  style="text-align: center;">Program Leader and the Commodities</th>
                     </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">Programs</th>
