--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -6,145 +6,92 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #ffffff;
-    /* background-image: url("https://transparenttextures.com/patterns/hoffman.png"); */
+body{
+    background-color: antiquewhite;
+    background-image: linear-gradient(to top right, white , white, white, #66b366);
+    background-repeat: no-repeat;
 }
 
-.cont{
+.container{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 3%;
+    padding: 10px 20px;
+}
+
+.about{
+    display: flex;
     justify-content: space-between;
-    background: #f1f1f1;
-    width: 70%;
-    padding: 0px;
-    margin: auto;
-    border-radius: 10px;
-    border: 2px solid #083d08;
-    box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
+    align-items: center;
+    flex-wrap: wrap ;
 }
 
-.wrapper{
-    width: 100%;
+.about-image{
+    flex: 1;
+    margin-right: 40px;
+    overflow: hidden;
 }
 
-.text-box{
-    padding: 20px 20px 5px 20px;
-    color: #008000;
-    font-family: Arial, Helvetica, sans-serif;
-    /* letter-spacing: 1px; */
-}
-
-.img_logo {
-    max-width: 13%;
-    height: auto;
-    display:block;
+.about-image img{
     margin-left: auto;
     margin-right: auto;
-    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.203));
+    width: 80%;
+    height: auto;
+    display: block;
+    transition: 0.5s ease;
+    /* border-right: 8px solid #008000; */
 }
 
-.img_com {
-    max-width: 40%;
-    height: auto;
-    display:block;
+#img_cmi{
     margin-left: auto;
     margin-right: auto;
-    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.203));
-}
-
-.img_team {
-    max-width: 20%;
-    height: auto;
-    display:block;
-    padding-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.137));
-}
-
-h2{
-    text-align: center;
-    font-size: 20px;
     width: 60%;
-    padding-top: 23px;
-    margin: auto;
+    height: auto;
+    display: block;
+    transition: 0.5s ease;
+    /* border-right: 8px solid #008000; */
 }
 
-.btn{
-    text-align: center;
-    margin: 0;
-    padding: 0;
+.about-content{
+    flex:1;
 }
 
-.btn_del{
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
-
-.name {
-    font-family: Poppins;
-    font-weight: 600;
-    font-size: 30px;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
-.fullname {
-    font-family: Poppins;
-    font-weight: 600;
-    font-size: 2.5vw;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
-.content{
-    padding-top: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    color: #083d08;
-}
-
-.content a{
-    text-decoration: none;
-    color: #083d08;
-}
-
-.content h4 a{
+.about-content h1{
+    font-size: 29px;
+    color: #333;
     font-weight: 700;
+}
+
+.about-content p{
+    font-size: 15px;
+}
+
+.about-content .btn{
+    display: inline-block;
+    color: #fff;
+    font-size: 19px;
+    text-decoration: none;
+    border-radius: 1px;
+    margin-top: 15px;
+    transition: 0.3s ease;
+    margin-right: 6px;
     font-size: 16px;
+    width: 80px;
+}
+
+table{
+    table-layout:fixed;
+    word-break: keep-all;
+    border-collapse: collapse;
+}
+
+td {
+    padding-left: 20px;
+}
+
+td a{
+    color: #008000;
     text-decoration: none;
-    color: #083d08;
-}
-
-.content h4 a:hover{
-    text-decoration: underline;
-    color: #339933;
-}
-
-.text-box .btn{
-    background-color: #008000;
-    color: rgb(255, 255, 255);
-}
-
-.text-box .btn_del{
-    margin-left: 5px;
-    position: absolute;
-    text-decoration: none;
-    background-color: #c72121;
-    padding: 6.5px;
-    color: rgb(255, 255, 255);
-    border-radius: 5px;
-}
-
-.text-box .btn:hover{
-    background-color: #339933;
-    border: 1px solid #008000;
-    color: rgb(255, 255, 255);
-}
-
-.text-box .btn_del:hover{
-    background-color: #d73030;
-    color: rgb(255, 255, 255);
 }
 
 #table_cmi{
@@ -157,6 +104,7 @@ h2{
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
+    border: 1px solid rgba(0, 0, 0, 0.114);
 }
 
 #table_cmi thead tr th{
@@ -177,44 +125,44 @@ h2{
     padding: 5px;
 }
 
-@media (max-width:600px) {
-    #nav-placeholder{  
-        position: relative;
-        z-index: 70;
-    }
-}
 
-@media (max-width:400px) {
-    .img_logo {
-        max-width: 23%;
+@media screen and (max-width: 768px){
+    .heading{
+        padding: 0px 20px;
     }
-    .text-box{
-        padding: 1px 20px 5px 20px;
-        color: #008000;
-        font-family: Arial, Helvetica, sans-serif;
-        /* letter-spacing: 1px; */
+    .heading h1{
+        font-size: 36px;
     }
-    .name {
-        font-family: Poppins;
-        font-weight: 600;
+    .heading p{
+        font-size: 17px;
+        margin-bottom: 0px;
+    }
+    .container{
+        padding: 0px;
+    }
+    .about{
+        padding: 20px;
+        flex-direction: column;
+    }
+    .about-image{
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+    .about-image img{
+        border-right: none;
+    }
+    .about-content p{
+        padding: 0px;
         font-size: 16px;
-        text-align: center;
     }
-    .content{
-        padding-top: 10px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: 600;
-        color: #083d08;
-        font-size: 12px;
+    .about-content .read-more{
+        font-size: 16px;
     }
-    .content h4 a{
-        font-weight: 700;
-        font-size: 11px;
-        text-decoration: none;
-        color: #083d08;
+    table{
+        font-size: 14px;
     }
-    .cont{
-        width: 85%;
+    td {
+        padding-left: 10px;
     }
     #table_cmi{
         margin-top: 10px;
@@ -224,4 +172,3 @@ h2{
         font-size: 12px;
     }
 }
-
