--- a/team/templates/team/details.html
+++ b/team/templates/team/details.html
@@ -16,51 +16,86 @@
 
     <body>
         <div id="nav-placeholder"></div>
-
-        <br>
             
-        <div class="cont">
-            <div class="wrapper">
-                {% if team.photo %}
-                <img class="img_team" src="{{ team.photo.url }}" alt="img_ferson">
-                {% endif %}
-                <div class="text-box">
-                    <p>
-                        <div class="fullname">{{team.lname}}, {{team.fname}} {{team.mname}}</div>
-                        <div class="content">Position: {{team.position}}</div>
-                        <div class="content">CMI: {{team.cmi}}</div>
-                        <div class="content">Team: {{team.teams}}</div>
-                        <div class="content">Sex: {{team.sex}}</div>
-                        <div class="content">Email Address:<br> {{team.email_add}}</div>
-                        <div class="content">Contact Number:<br> {{team.contact_no}}</div>
-                        <div class="content">Date Appointed:<br> {{team.date_appointed}}</div>
-                        <div class="content">Specialization: {{team.specialization}}</div><br>
+        <div class="container">
+            <section class="about">
+                <div class="about-image">
+                    {% if team.photo %}
+                    <img class="img_team" src="{{ team.photo.url }}" alt="img_ferson">
+                    {% endif %}
+                </div>
+                    <div class="about-content">
+                        <h1>{{team.lname}}, {{team.fname}} {{team.mname}}</h1>
+                        <h5>{{team.position}}</h5>
+                        <table>
+                            <tr>
+                                <th></th>
+                                <td></td>
+                            </tr>
+                            
+                            <tr>
+                                <th>CMI:</th>
+                                <td>{{team.cmi}}</td>
+                            </tr>
+    
+                            <tr>
+                                <th>Team:</th>
+                                <td>{{team.teams}}</td>
+                            </tr>
+                            <tr>
+                                <th>Sex: </th>
+                                <td>{{team.sex}}</td>
+                            </tr>
+                    
+                            <tr>
+                                <th>Email Address:</th>
+                                <td>{{team.email_add}}</td>
+                            </tr>
+    
+                            <tr>
+                                <th>Date Appointed:</th>
+                                <td>{{team.date_appointed}}</td>
+                            </tr>
+                            
+                            <tr>
+                                <th>Contact Number:</th>
+                                <td>{{team.contact_no}}</td>
+                            </tr>
+                    
+                            <tr>
+                                <th>Specialization: </th>
+                                <td>{{team.specialization}}</td>
+                            </tr>
 
-                        {% if user.is_authenticated %}
-                        {% if team.pds_file %}
-                        <div class="content">Pds File:
-                        <h4><a href="{{ team.pds_file.url }} " target="_blank">Download File<i class="bx bxs-download"></i></a></h4>
-                        </div>
-                        {% endif %}
+                            {% if user.is_authenticated %}
+                        <tr>
+                            {% if team.pds_file %}
+                            <th>Pds File: </th>
+                            <td><a href="{{ team.pds_file.url }}" target="_blank">Download File</a></td>
+                            {% endif %}
+                        </tr>
 
                         {% if user.is_superuser %}
-                        <div class="content">Created By: {{team.created_by}}
-                        <div class="content">Modified By: {{team.modified_by}}</div><br><br>
-                        {% endif %}
-                        {% endif %}
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{team.created_by}}</td>
+                        </tr>
 
-                        <a href="{% url 'team:team' %}" class="btn" style="font-weight: 600;">Back</a>
-                        {% if user.is_superuser or user.secretariat %}
-                        <a href="{% url 'team:edit' team.member_id %}" class="btn" style="font-weight: 600;">Edit</a>
-                        <a href="{% url 'team:delete' team.member_id %}" class="btn_del" style="font-weight: 600; color: rgb(255, 255, 255);">Delete</a>
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{team.modified_by}}</td>
+                        </tr>
                         {% endif %}
-                    </p>
+                        {% endif %}
+                    </table>
+                    
+                    {% if user.is_superuser or user.secretariat %}
+                        <a href="{% url 'team:edit' team.member_id %}" class="btn btn-success">Edit</a>
+                        <a href="{% url 'team:delete' team.member_id %}" class="btn btn-danger">Delete</a>
+                    {% endif %}
+                    <a href="{% url 'team:team' %}" class="btn btn-secondary">Back</a>
                 </div>
-            </div>
-
-            <div class="#">
-            </div>
-
+            </section>
         </div>
 
         <script>
